@@ -46,7 +46,6 @@ import java.time.temporal.ChronoUnit;
 import java.util.Date;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static com.github.tomakehurst.wiremock.client.WireMock.get;
@@ -181,7 +180,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
     int expectedNotDiscardedNumber = 2;
     List<JobExecution> createdJobExecutions = constructAndPostInitJobExecutionRqDto(numberOfFiles).getJobExecutions();
     List<JobExecution> children = createdJobExecutions.stream()
-      .filter(jobExec -> jobExec.getSubordinationType().equals(CHILD)).collect(Collectors.toList());
+      .filter(jobExec -> jobExec.getSubordinationType().equals(CHILD)).toList();
     StatusDto discardedStatus = new StatusDto().withStatus(StatusDto.Status.DISCARDED);
 
     for (int i = 0; i < children.size() - expectedNotDiscardedNumber; i++) {
@@ -208,7 +207,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
     int expectedNotHiddenNumber = 2;
     List<JobExecution> createdJobExecutions = constructAndPostInitJobExecutionRqDto(numberOfFiles).getJobExecutions();
     List<JobExecution> children = createdJobExecutions.stream()
-      .filter(jobExec -> jobExec.getSubordinationType().equals(CHILD)).collect(Collectors.toList());
+      .filter(jobExec -> jobExec.getSubordinationType().equals(CHILD)).toList();
 
     for (int i = 0; i < children.size() - expectedNotHiddenNumber; i++) {
       var jobExecution = children.get(i);
@@ -297,7 +296,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
     List<JobExecution> createdJobExecution = constructAndPostInitJobExecutionRqDto(8).getJobExecutions();
     List<JobExecution> childJobsToUpdate = createdJobExecution.stream()
       .filter(jobExecution -> jobExecution.getSubordinationType().equals(CHILD))
-      .collect(Collectors.toList());
+      .toList();
 
     for (int i = 0; i < childJobsToUpdate.size(); i++) {
       if (i % 2 == 0) {
@@ -336,7 +335,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
     List<JobExecution> createdJobExecution = constructAndPostInitJobExecutionRqDto(4).getJobExecutions();
     List<JobExecution> childJobsToUpdate = createdJobExecution.stream()
       .filter(jobExecution -> jobExecution.getSubordinationType().equals(CHILD))
-      .collect(Collectors.toList());
+      .toList();
 
     for (int i = 0; i < childJobsToUpdate.size(); i++) {
       putJobExecution(createdJobExecution.get(i)
@@ -366,7 +365,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
     List<JobExecution> createdJobExecution = constructAndPostInitJobExecutionRqDto(5).getJobExecutions();
     List<JobExecution> childJobsToUpdate = createdJobExecution.stream()
       .filter(jobExecution -> jobExecution.getSubordinationType().equals(CHILD))
-      .collect(Collectors.toList());
+      .toList();
     List<JobExecution.Status> statuses = List.of(JobExecution.Status.COMMITTED, JobExecution.Status.CANCELLED, JobExecution.Status.CANCELLED, JobExecution.Status.ERROR, JobExecution.Status.ERROR);
 
     for (int i = 0; i < childJobsToUpdate.size(); i++) {
@@ -401,7 +400,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
     List<JobExecution> createdJobExecution = constructAndPostInitJobExecutionRqDto(5).getJobExecutions();
     List<JobExecution> childJobsToUpdate = createdJobExecution.stream()
       .filter(jobExecution -> jobExecution.getSubordinationType().equals(CHILD))
-      .collect(Collectors.toList());
+      .toList();
     List<JobExecution.Status> statuses = List.of(JobExecution.Status.COMMITTED, JobExecution.Status.CANCELLED, JobExecution.Status.CANCELLED, JobExecution.Status.ERROR, JobExecution.Status.ERROR);
 
     for (int i = 0; i < childJobsToUpdate.size(); i++) {
@@ -436,7 +435,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
     List<JobExecution> createdJobExecution = constructAndPostInitJobExecutionRqDto(4).getJobExecutions();
     List<JobExecution> childJobsToUpdate = createdJobExecution.stream()
       .filter(jobExecution -> jobExecution.getSubordinationType().equals(CHILD))
-      .collect(Collectors.toList());
+      .toList();
 
     for (int i = 0; i < childJobsToUpdate.size(); i++) {
       putJobExecution(createdJobExecution.get(i)
@@ -552,7 +551,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
     List<JobExecution> createdJobExecution = constructAndPostInitJobExecutionRqDto(4).getJobExecutions();
     List<JobExecution> childJobsToUpdate = createdJobExecution.stream()
       .filter(jobExecution -> jobExecution.getSubordinationType().equals(CHILD))
-      .collect(Collectors.toList());
+      .toList();
 
     List<String> profilesNames = List.of("air", "Apple", "driver", "Zero");
 
@@ -628,7 +627,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
     List<JobExecution> createdJobExecution = constructAndPostInitJobExecutionRqDto(4).getJobExecutions();
     List<JobExecution> childJobsToUpdate = createdJobExecution.stream()
       .filter(jobExecution -> jobExecution.getSubordinationType().equals(CHILD))
-      .collect(Collectors.toList());
+      .toList();
 
     for (int i = 0; i < childJobsToUpdate.size(); i++) {
       String id = (i % 2 == 0) ? profileId : UUID.randomUUID().toString();
@@ -658,7 +657,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
     DateTimeFormatter dateTimeFormatter = DateTimeFormatter.ofPattern("yyyy-MM-dd");
     List<JobExecution> childJobsToUpdate = constructAndPostInitJobExecutionRqDto(8).getJobExecutions().stream()
       .filter(jobExecution -> jobExecution.getSubordinationType().equals(CHILD))
-      .collect(Collectors.toList());
+      .toList();
 
     Date dateFrom = new Date();
     Date dateTo = Date.from(Instant.now().plus(1, ChronoUnit.DAYS));
@@ -687,7 +686,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
       .extract().as(JobExecutionDtoCollection.class)
       .getJobExecutions().stream()
       .map(JobExecutionDto::getCompletedDate)
-      .collect(Collectors.toList());
+      .toList();
 
     assertThat(completedDates, everyItem(greaterThanOrEqualTo(dateFrom)));
     assertThat(completedDates, everyItem(lessThanOrEqualTo((dateTo))));
@@ -700,7 +699,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
     String profileId2 = "91f9b8d6-d80e-4727-9783-73fb53e3c786";
     List<JobExecution> childJobsToUpdate = constructAndPostInitJobExecutionRqDto(4).getJobExecutions().stream()
       .filter(jobExecution -> jobExecution.getSubordinationType().equals(CHILD))
-      .collect(Collectors.toList());
+      .toList();
 
     int expectedJobExecutionsNumber = 2;
     for (int i = 0; i < expectedJobExecutionsNumber; i++) {
@@ -731,7 +730,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
     String userId = "d0ebb7b0-2f0f-11eb-adc1-0242ac120002";
     List<JobExecution> childJobsToUpdate = constructAndPostInitJobExecutionRqDto(4).getJobExecutions().stream()
       .filter(jobExecution -> jobExecution.getSubordinationType().equals(CHILD))
-      .collect(Collectors.toList());
+      .toList();
 
     for (int i = 0; i < childJobsToUpdate.size(); i++) {
       if (i % 2 == 0) {
@@ -759,7 +758,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
     List<JobExecution> createdJobExecution = constructAndPostInitJobExecutionRqDto(4).getJobExecutions();
     List<JobExecution> childJobsToUpdate = createdJobExecution.stream()
       .filter(jobExecution -> jobExecution.getSubordinationType().equals(CHILD))
-      .collect(Collectors.toList());
+      .toList();
 
     List<String> profilesNames = List.of("air", "Apple", "driver", "Zero");
 
@@ -794,7 +793,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
     InitJobExecutionsRsDto response = constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
 
     JournalRecordCollection journalRecords = RestAssured.given()
       .spec(spec)
@@ -824,7 +823,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
     InitJobExecutionsRsDto response = constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
 
     RestAssured.given()
       .spec(spec)
@@ -853,15 +852,15 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
     InitJobExecutionsRsDto response = constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
     String sourceRecordId = UUID.randomUUID().toString();
     String title = "test title";
 
     Future<JournalRecord> future = Future.succeededFuture()
-      .compose(v -> createJournalRecord(createdJobExecutions.get(0).getId(), sourceRecordId, null, null, title, 1, CREATE, MARC_BIBLIOGRAPHIC, COMPLETED, null))
-      .compose(v -> createJournalRecord(createdJobExecutions.get(0).getId(), sourceRecordId, null, null, title, 1, CREATE, INSTANCE, COMPLETED, null))
-      .compose(v -> createJournalRecord(createdJobExecutions.get(0).getId(), sourceRecordId, null, null, title, 2, CREATE, MARC_BIBLIOGRAPHIC, COMPLETED, null))
-      .compose(v -> createJournalRecord(createdJobExecutions.get(0).getId(), sourceRecordId, null, null, title, 2, CREATE, INSTANCE, COMPLETED, null))
+      .compose(v -> createJournalRecord(createdJobExecutions.getFirst().getId(), sourceRecordId, null, null, title, 1, CREATE, MARC_BIBLIOGRAPHIC, COMPLETED, null))
+      .compose(v -> createJournalRecord(createdJobExecutions.getFirst().getId(), sourceRecordId, null, null, title, 1, CREATE, INSTANCE, COMPLETED, null))
+      .compose(v -> createJournalRecord(createdJobExecutions.getFirst().getId(), sourceRecordId, null, null, title, 2, CREATE, MARC_BIBLIOGRAPHIC, COMPLETED, null))
+      .compose(v -> createJournalRecord(createdJobExecutions.getFirst().getId(), sourceRecordId, null, null, title, 2, CREATE, INSTANCE, COMPLETED, null))
       .onFailure(testContext::fail);
 
     future.onComplete(ar -> testContext.verify(v -> {
@@ -889,15 +888,15 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
     InitJobExecutionsRsDto response = constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
     String expectedRecordTitle = "The Journal of ecclesiastical history.";
     String sourceRecordId = UUID.randomUUID().toString();
 
     Future<JournalRecord> future = Future.succeededFuture()
-      .compose(v -> createJournalRecord(createdJobExecutions.get(0).getId(), sourceRecordId, null, null, expectedRecordTitle, 1, CREATE, MARC_BIBLIOGRAPHIC, COMPLETED, null))
-      .compose(v -> createJournalRecord(createdJobExecutions.get(0).getId(), sourceRecordId, null, null, expectedRecordTitle, 1, CREATE, INSTANCE, COMPLETED, null))
-      .compose(v -> createJournalRecord(createdJobExecutions.get(0).getId(), sourceRecordId, null, null, expectedRecordTitle, 2, CREATE, MARC_BIBLIOGRAPHIC, COMPLETED, null))
-      .compose(v -> createJournalRecord(createdJobExecutions.get(0).getId(), sourceRecordId, null, null, expectedRecordTitle, 2, CREATE, INSTANCE, COMPLETED, null))
+      .compose(v -> createJournalRecord(createdJobExecutions.getFirst().getId(), sourceRecordId, null, null, expectedRecordTitle, 1, CREATE, MARC_BIBLIOGRAPHIC, COMPLETED, null))
+      .compose(v -> createJournalRecord(createdJobExecutions.getFirst().getId(), sourceRecordId, null, null, expectedRecordTitle, 1, CREATE, INSTANCE, COMPLETED, null))
+      .compose(v -> createJournalRecord(createdJobExecutions.getFirst().getId(), sourceRecordId, null, null, expectedRecordTitle, 2, CREATE, MARC_BIBLIOGRAPHIC, COMPLETED, null))
+      .compose(v -> createJournalRecord(createdJobExecutions.getFirst().getId(), sourceRecordId, null, null, expectedRecordTitle, 2, CREATE, INSTANCE, COMPLETED, null))
       .onFailure(testContext::fail);
 
     future.onComplete(ar -> testContext.verify(v -> {
@@ -919,7 +918,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
   @Test
   public void shouldReturnCreatedRecordInstanceHoldingItemSummary(TestContext context) {
     Async async = context.async();
-    String jobExecutionId = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().get(0).getId();
+    String jobExecutionId = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().getFirst().getId();
     String sourceRecordId = UUID.randomUUID().toString();
     String recordTitle = "test title";
 
@@ -966,7 +965,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
   @Test
   public void shouldReturnCreatedRecordOrderSummary(TestContext context) {
     Async async = context.async();
-    String jobExecutionId = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().get(0).getId();
+    String jobExecutionId = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().getFirst().getId();
     String sourceRecordId = UUID.randomUUID().toString();
     String recordTitle = "test title";
 
@@ -1006,7 +1005,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
   @Test
   public void shouldReturnDiscardedEntityOrderSummary(TestContext context) {
     Async async = context.async();
-    String jobExecutionId = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().get(0).getId();
+    String jobExecutionId = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().getFirst().getId();
     String sourceRecordId = UUID.randomUUID().toString();
     String recordTitle = "test title";
     String errorMessage = "Error during creating";
@@ -1047,7 +1046,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
   @Test
   public void shouldReturnOnly1UpdatedInstanceIfSeveralActionsWereDoneForTheSameInstanceEntity(TestContext context) {
     Async async = context.async();
-    String jobExecutionId = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().get(0).getId();
+    String jobExecutionId = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().getFirst().getId();
     String sourceRecordId = UUID.randomUUID().toString();
     String recordTitle = "test title";
 
@@ -1083,7 +1082,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
   @Test
   public void shouldReturnUpdatedSourceRecordSummaryWhenRecordWasUpdated(TestContext context) {
     Async async = context.async();
-    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().get(0);
+    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().getFirst();
     String sourceRecordId = UUID.randomUUID().toString();
     String recordTitle = "test title";
 
@@ -1112,7 +1111,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
   @Test
   public void shouldReturnEightUpdatedSourceRecordSummaryWhenRecordWasUpdated(TestContext context) {
     Async async = context.async();
-    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().get(0);
+    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().getFirst();
     List<String> marcBibEntityIds = IntStream.range(0,8).mapToObj(i->UUID.randomUUID().toString()).toList();
     List<String> marcBibSourceIds = IntStream.range(0,8).mapToObj(i->UUID.randomUUID().toString()).toList();
 
@@ -1147,7 +1146,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
   @Test
   public void shouldNotReturnUpdatedSourceRecordSummaryWhenRecordWasModified(TestContext context) {
     Async async = context.async();
-    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().get(0);
+    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().getFirst();
     String sourceRecordId = UUID.randomUUID().toString();
     String recordTitle = "test title";
 
@@ -1176,7 +1175,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
   @Test
   public void shouldReturnDiscardedInstanceWhenInstanceDidNotMatch(TestContext context) {
     Async async = context.async();
-    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().get(0);
+    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().getFirst();
     String sourceRecordId = UUID.randomUUID().toString();
 
     Future<JournalRecord> future = Future.succeededFuture()
@@ -1213,7 +1212,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
   @Test
   public void shouldReturnCreatedInstanceWhenInstanceCreatedInNonMatchSection(TestContext context) {
     Async async = context.async();
-    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().get(0);
+    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().getFirst();
     String sourceRecordId = UUID.randomUUID().toString();
     String title = "title";
 
@@ -1252,7 +1251,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
   @Test
   public void shouldReturnInstanceDiscardedWithErrorsWhenInstanceCreationFailed(TestContext context) {
     Async async = context.async();
-    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().get(0);
+    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().getFirst();
     String sourceRecordId = UUID.randomUUID().toString();
 
     Future<JournalRecord> future = Future.succeededFuture()
@@ -1284,7 +1283,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
   @Test
   public void shouldReturnDiscardedForMarcBibAndInstanceIfMarcBibMatchedAndNoOtherAction(TestContext context) {
     Async async = context.async();
-    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().get(0);
+    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().getFirst();
     String sourceRecordId = UUID.randomUUID().toString();
     String recordTitle = "test title";
 
@@ -1317,7 +1316,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
   @Test
   public void shouldReturnDiscardedForHoldingsIfHoldingsMatchedAndNoOtherAction(TestContext context) {
     Async async = context.async();
-    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().get(0);
+    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().getFirst();
     String sourceRecordId = UUID.randomUUID().toString();
     String recordTitle = "test title";
 
@@ -1346,7 +1345,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
   @Test
   public void shouldReturnDiscardedForItemIfItemMatchedAndNoOtherAction(TestContext context) {
     Async async = context.async();
-    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().get(0);
+    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().getFirst();
     String sourceRecordId = UUID.randomUUID().toString();
     String recordTitle = "test title";
 
@@ -1375,7 +1374,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
   @Test
   public void shouldReturnDiscardedForAuthorityIfAuthorityMatchedAndNoOtherAction(TestContext context) {
     Async async = context.async();
-    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().get(0);
+    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().getFirst();
     String sourceRecordId = UUID.randomUUID().toString();
     String recordTitle = "test title";
 
@@ -1404,7 +1403,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
   @Test
   public void shouldNotReturnDiscardedForMarcBibAndInstanceIfHoldingsCreatedOnMatchByInstance(TestContext context) {
     Async async = context.async();
-    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().get(0);
+    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().getFirst();
     String sourceRecordId = UUID.randomUUID().toString();
     String recordTitle = "test title";
     String holdingsEntityId = UUID.randomUUID().toString();
@@ -1443,7 +1442,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
   @Test
   public void shouldReturnDiscardedForAuthorityIfAuthorityMatchedWithErrorAndOtherAuthorityUpdated(TestContext context) {
     Async async = context.async();
-    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().get(0);
+    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().getFirst();
     String sourceRecordId1 = UUID.randomUUID().toString();
     String sourceRecordId2 = UUID.randomUUID().toString();
     String authorityId = UUID.randomUUID().toString();
@@ -1483,7 +1482,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
   @Test
   public void shouldNotReturnDiscardedForHoldingsIfItemCreatedOnMatchByHoldings(TestContext context) {
     Async async = context.async();
-    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().get(0);
+    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().getFirst();
     String incomingRecordId = UUID.randomUUID().toString();
     String recordTitle = "test title";
 
@@ -1519,7 +1518,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
   @Test
   public void shouldReturnAuthoritySummaryWhenAuthorityWasCreated(TestContext context) {
     Async async = context.async();
-    String jobExecutionId = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().get(0).getId();
+    String jobExecutionId = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().getFirst().getId();
     String sourceRecordId = UUID.randomUUID().toString();
 
     Future<JournalRecord> future = Future.succeededFuture()
@@ -1552,7 +1551,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
   @Test
   public void shouldReturnInvoiceSummaryWhenInvoiceWasCreated(TestContext context) {
     Async async = context.async();
-    String jobExecutionId = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().get(0).getId();
+    String jobExecutionId = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().getFirst().getId();
     String sourceRecordId = UUID.randomUUID().toString();
     String invoiceTitle = "INVOICE";
     String invoiceLineDescription = "Some description";
@@ -1590,7 +1589,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
   @Test
   public void shouldReturnInvoiceSummaryWithErrorsWhenInvoiceCreationFailed(TestContext context) {
     Async async = context.async();
-    String jobExecutionId = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().get(0).getId();
+    String jobExecutionId = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().getFirst().getId();
     String sourceRecordId = UUID.randomUUID().toString();
     String invoiceTitle = "INVOICE";
     String invoiceLineDescription = "Some description";
@@ -1622,7 +1621,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
   @Test
   public void shouldReturnInvoiceSummaryWithErrorsWhenAnyInvoiceLineCreationFailed(TestContext context) {
     Async async = context.async();
-    String jobExecutionId = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().get(0).getId();
+    String jobExecutionId = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().getFirst().getId();
     String sourceRecordId = UUID.randomUUID().toString();
     String invoiceTitle = "INVOICE";
     String invoiceLineDescription = "Some description";
@@ -1655,7 +1654,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
   @Test
   public void shouldReturnOneInvoiceErrorWhenAllInvoiceLinesCreationFailed(TestContext context) {
     Async async = context.async();
-    String jobExecutionId = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().get(0).getId();
+    String jobExecutionId = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().getFirst().getId();
     String sourceRecordId = UUID.randomUUID().toString();
     String invoiceTitle = "INVOICE";
     String invoiceLineDescription = "Some description";
@@ -1688,7 +1687,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
   @Test
   public void shouldReturnOneUpdatedSourceRecordWhenRecordWasModifiedAndUpdated(TestContext context) {
     Async async = context.async();
-    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().get(0);
+    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().getFirst();
     String sourceRecordId = UUID.randomUUID().toString();
     String recordTitle = "test title";
 
@@ -1716,7 +1715,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
   @Test
   public void shouldReturnMultipleDiscardedMarcBib(TestContext context) {
     Async async = context.async();
-    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().get(0);
+    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().getFirst();
     String recordTitle = "test title";
 
     Future<JournalRecord> future = Future.succeededFuture()
@@ -1743,7 +1742,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
   @Test
   public void shouldReturnMultipleErrorInstances(TestContext context) {
     Async async = context.async();
-    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().get(0);
+    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().getFirst();
     String[] sourceRecordIds = {UUID.randomUUID().toString(), UUID.randomUUID().toString(), UUID.randomUUID().toString()};
     String errMessage = "error";
 
@@ -1784,7 +1783,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
   @Test
   public void shouldReturnMultipleErrorHoldings(TestContext context) {
     Async async = context.async();
-    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().get(0);
+    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().getFirst();
     String[] sourceRecordIds = {UUID.randomUUID().toString(), UUID.randomUUID().toString(), UUID.randomUUID().toString()};
     String[] marcBibEntityIds = {UUID.randomUUID().toString(), UUID.randomUUID().toString(), UUID.randomUUID().toString()};
     String[] instanceEntityIds = {UUID.randomUUID().toString(), UUID.randomUUID().toString(), UUID.randomUUID().toString()};
@@ -1834,7 +1833,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
   @Test
   public void shouldReturnMultipleErrorItems(TestContext context) {
     Async async = context.async();
-    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().get(0);
+    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().getFirst();
     String[] sourceRecordIds = {UUID.randomUUID().toString(), UUID.randomUUID().toString(), UUID.randomUUID().toString()};
     String[] marcBibEntityIds = {UUID.randomUUID().toString(), UUID.randomUUID().toString(), UUID.randomUUID().toString()};
     String[] instanceEntityIds = {UUID.randomUUID().toString(), UUID.randomUUID().toString(), UUID.randomUUID().toString()};
@@ -1893,7 +1892,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
   @Test
   public void shouldReturnMultipleDiscardedHoldings(TestContext context) {
     Async async = context.async();
-    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().get(0);
+    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().getFirst();
     String[] sourceRecordIds = {UUID.randomUUID().toString(), UUID.randomUUID().toString(), UUID.randomUUID().toString()};
     String[] marcBibEntityIds = {UUID.randomUUID().toString(), UUID.randomUUID().toString(), UUID.randomUUID().toString()};
     String[] instanceEntityIds = {UUID.randomUUID().toString(), UUID.randomUUID().toString(), UUID.randomUUID().toString()};
@@ -1942,7 +1941,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
   @Test
   public void shouldReturnMultipleDiscardedHoldingsAndItems(TestContext context) {
     Async async = context.async();
-    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().get(0);
+    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().getFirst();
     String[] sourceRecordIds = {UUID.randomUUID().toString(), UUID.randomUUID().toString(), UUID.randomUUID().toString()};
     String[] marcBibEntityIds = {UUID.randomUUID().toString(), UUID.randomUUID().toString(), UUID.randomUUID().toString()};
     String[] instanceEntityIds = {UUID.randomUUID().toString(), UUID.randomUUID().toString(), UUID.randomUUID().toString()};
@@ -1998,7 +1997,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
   @Test
   public void shouldReturnDiscardedMarcBibAndInstance(TestContext context) {
     Async async = context.async();
-    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().get(0);
+    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().getFirst();
     String sourceRecordId = UUID.randomUUID().toString();
     String title = "title";
 
@@ -2060,13 +2059,13 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
 
   @Test
   public void shouldNotReturnDeletedJobExecutionRecords() {
-    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().get(0);
+    JobExecution createdJobExecution = constructAndPostInitJobExecutionRqDto(1).getJobExecutions().getFirst();
 
     putJobExecution(createdJobExecution);
 
     DeleteJobExecutionsResp deleteJobExecutionsResp = ChangeManagerAPITest.returnDeletedJobExecutionResponse(new String[]{createdJobExecution.getId()});
-    assertThat(deleteJobExecutionsResp.getJobExecutionDetails().get(0).getJobExecutionId(), is(createdJobExecution.getId()));
-    assertThat(deleteJobExecutionsResp.getJobExecutionDetails().get(0).getIsDeleted(), is(true));
+    assertThat(deleteJobExecutionsResp.getJobExecutionDetails().getFirst().getJobExecutionId(), is(createdJobExecution.getId()));
+    assertThat(deleteJobExecutionsResp.getJobExecutionDetails().getFirst().getIsDeleted(), is(true));
 
       RestAssured.given()
         .spec(spec)
@@ -2084,11 +2083,11 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
     InitJobExecutionsRsDto response = constructAndPostInitJobExecutionRqDto(1);
     List<JobExecution> createdJobExecutions = response.getJobExecutions();
     assertThat(createdJobExecutions.size(), is(1));
-    JobExecution jobExec = createdJobExecutions.get(0);
+    JobExecution jobExec = createdJobExecutions.getFirst();
 
     DeleteJobExecutionsResp deleteJobExecutionsResp = ChangeManagerAPITest.returnDeletedJobExecutionResponse(new String[]{jobExec.getId()});
-    assertThat(deleteJobExecutionsResp.getJobExecutionDetails().get(0).getJobExecutionId(), is(jobExec.getId()));
-    assertThat(deleteJobExecutionsResp.getJobExecutionDetails().get(0).getIsDeleted(), is(true));
+    assertThat(deleteJobExecutionsResp.getJobExecutionDetails().getFirst().getJobExecutionId(), is(jobExec.getId()));
+    assertThat(deleteJobExecutionsResp.getJobExecutionDetails().getFirst().getIsDeleted(), is(true));
 
 
     RestAssured.given()
@@ -2117,7 +2116,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
     List<JobExecution.Status> statuses = List.of(COMMITTED, JobExecution.Status.ERROR, CANCELLED, FILE_UPLOADED);
     List<JobExecution> childJobs = constructAndPostInitJobExecutionRqDto(statuses.size()).getJobExecutions().stream()
       .filter(jobExecution -> jobExecution.getSubordinationType().equals(CHILD))
-      .collect(Collectors.toList());
+      .toList();
 
     for (int i = 0; i < childJobs.size(); i++) {
       JobExecution.Status status = statuses.get(i);
@@ -2148,7 +2147,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
     List<JobExecution> createdJobExecution = constructAndPostInitJobExecutionRqDto(uniqueJobProfilesAmount).getJobExecutions();
 
     List<JobExecution> children = createdJobExecution.stream()
-      .filter(jobExec -> jobExec.getSubordinationType().equals(CHILD)).collect(Collectors.toList());
+      .filter(jobExec -> jobExec.getSubordinationType().equals(CHILD)).toList();
     for (JobExecution jobExecution : children) {
       jobExecution.setJobProfileInfo(new JobProfileInfo().withId(UUID.randomUUID().toString())
         .withName("Marc jobs profile"));
@@ -2183,7 +2182,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
     String nonExpectedJobProfileId = UUID.randomUUID().toString();
     List<JobExecution> childJobs = constructAndPostInitJobExecutionRqDto(4).getJobExecutions().stream()
       .filter(jobExecution -> jobExecution.getSubordinationType().equals(CHILD))
-      .collect(Collectors.toList());
+      .toList();
 
     for (int i = 0; i < childJobs.size(); i++) {
       String id = (i % 2 == 0) ? nonExpectedJobProfileId : UUID.randomUUID().toString();
@@ -2198,7 +2197,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
     List<String> jobIdsToMarkAsDeleted = childJobs.stream()
       .filter(job -> job.getJobProfileInfo().getId().equals(nonExpectedJobProfileId))
       .map(JobExecution::getId)
-      .collect(Collectors.toList());
+      .toList();
 
     // Marks job executions as deleted which contain nonExpectedJobProfileId in the jobProfileInfo
     RestAssured.given()
@@ -2238,7 +2237,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
     List<JobExecution> createdJobExecution = constructAndPostInitJobExecutionRqDto(statuses.size()).getJobExecutions();
 
     List<JobExecution> children = createdJobExecution.stream()
-      .filter(jobExec -> jobExec.getSubordinationType().equals(CHILD)).collect(Collectors.toList());
+      .filter(jobExec -> jobExec.getSubordinationType().equals(CHILD)).toList();
     for (int i = 0; i < children.size(); i++) {
       JobExecution jobExecution = children.get(i);
       putJobExecution(jobExecution.withStatus(statuses.get(i))
@@ -2268,7 +2267,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
     List<JobExecution> createdJobExecution = constructAndPostInitJobExecutionRqDto(5).getJobExecutions();
 
     List<JobExecution> children = createdJobExecution.stream()
-      .filter(jobExec -> jobExec.getSubordinationType().equals(CHILD)).collect(Collectors.toList());
+      .filter(jobExec -> jobExec.getSubordinationType().equals(CHILD)).toList();
     for (JobExecution jobExecution : children) {
       putJobExecution(jobExecution.withStatus(COMMITTED));
     }
@@ -2291,7 +2290,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
     // Creates 1 parent job and 4 child job executions
     List<JobExecution> childJobs = constructAndPostInitJobExecutionRqDto(4).getJobExecutions().stream()
       .filter(job -> job.getSubordinationType().equals(CHILD))
-      .collect(Collectors.toList());
+      .toList();
 
     for (int i = 0; i < childJobs.size(); i++) {
       String userId = (i % 2 == 0) ? nonExpectedUserId : UUID.randomUUID().toString();
@@ -2302,7 +2301,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
     List<String> jobIdsToMarkAsDeleted = childJobs.stream()
       .filter(job -> job.getUserId().equals(nonExpectedUserId))
       .map(JobExecution::getId)
-      .collect(Collectors.toList());
+      .toList();
 
     // Marks job executions as deleted which contain nonExpectedUserId
     RestAssured.given()
@@ -2333,7 +2332,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
     List<String> jobIdsToMarkAsDeleted = jobExecutions.stream()
       .filter(job -> job.getSubordinationType().equals(CHILD))
       .map(JobExecution::getId)
-      .collect(Collectors.toList());
+      .toList();
 
     // Marks child job executions as deleted which contain nonExpectedUserId
     RestAssured.given()
@@ -2403,7 +2402,7 @@ public class MetadataProviderJobExecutionAPITest extends AbstractRestTest {
     List<String> jobIdsToMarkAsDeleted = jobExecutions.stream()
       .filter(job -> job.getSubordinationType().equals(COMPOSITE_CHILD))
       .map(JobExecution::getId)
-      .collect(Collectors.toList());
+      .toList();
 
     // Marks child job executions as deleted which contain nonExpectedUserId
     RestAssured.given()
